--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ plugins {
 	id 'org.springframework.boot' version '2.6.7'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'groovy' //追加
 }
+
 
 group = 'com.volkruss'
 version = '0.0.1-SNAPSHOT'
@@ -17,9 +19,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	// spockのため
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.spockframework:spock-spring:2.1-groovy-3.0'
+	testImplementation 'org.spockframework:spock-core:2.1-groovy-3.0'
+	implementation 'org.codehaus.gmavenplus:gmavenplus-plugin:1.13.1'
+	// SpockがJunit4でSpringBoot2.2以降がJunit5なので以下で対応
+	testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
 }
 
 tasks.named('test') {
